--- a/states/index.html
+++ b/states/index.html
@@ -19,11 +19,12 @@
 <script src="js/phaser.min.js"></script>
 <script src="js/game.js"></script>
 <script src="js/boot.js"></script>
+<script src="js/foreplay.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/play.js"></script>
 <script src="js/player.js"></script>
 <script src="js/enemies.js"></script>
-<script src="js/win.js"></script>
+<script src="js/gameover.js"></script>
 
 <script type="text/javascript">
   function main() {
