added walking animation

--- a/anims/index.html
+++ b/anims/index.html
@@ -18,6 +18,8 @@
 <script src="js/play.js"></script>
 <script src="js/over.js"></script>
 
+<script src="js/player.js"></script>
+
 <script src="js/game.js"></script>
 <script>
   let game = undefined;
