--- a/anims/index.html
+++ b/anims/index.html
@@ -19,6 +19,7 @@
 <script src="js/over.js"></script>
 
 <script src="js/player.js"></script>
+<script src="js/enemy.js"></script>
 
 <script src="js/game.js"></script>
 <script>
