Improve building and add middleware

--- a/landing/static/index.html
+++ b/landing/static/index.html
@@ -6,13 +6,13 @@
 	<body>
 		<ul>
 			<li>
-				<a href="/anims">anims</a>
+				<a href="/?game=anims">anims</a>
 			</li>
 			<li>
-				<a href="/phaser-first-test">phaser-first-test</a>
+				<a href="/?game=phaser-first-test">phaser-first-test</a>
 			</li>
 			<li>
-				<a href="/states">states</a>
+				<a href="/?game=states">states</a>
 			</li>
 		</ul>
 	</body>
